--- a/frontend/src/scenes/app/css/submitForm.css
+++ b/frontend/src/scenes/app/css/submitForm.css
@@ -5,8 +5,8 @@
   padding: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
-  border: rgb(59, 59, 59) solid 4px;
-  box-shadow: 10px 10px 8px hsla(0, 0%, 9%, 0.38);
+  /* border: rgb(59, 59, 59) solid 4px; */
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 10px;
   border-radius: 5px;
 }
 
